--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,11 @@ spring.jpa.show-sql=true
 #ddl-auto? generate-ddl? ??
 #ddl ? ? none, false
 #ddl ? ? update, true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.generate-ddl=false
 
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.h2.console.enabled=true
+spring.datasource.url=jdbc:mariadb://localhost:3306/gym?characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.datasource.driverClassName=org.mariadb.jdbc.Driver
+#spring.h2.console.enabled=true
