--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-server.port = 4000
+server.port=4000
 
-spring.datasource.connectionProperties=useUnicode=true;characterEncoding=utf-8;
+# Encoding
+spring.datasource.connectionProperties=useUnicode=true;characterEncoding=utf-8;"
 spring.datasource.sql-script-encoding=UTF-8
 
 spring.jpa.properties.hibernate.format_sql=true
@@ -12,8 +13,23 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.generate-ddl=false
 
-spring.datasource.url=jdbc:mariadb://localhost:3306/gym?characterEncoding=UTF-8&serverTimezone=UTC
+#data.sql ??? init ? ??
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
+
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.h2.console.enabled=true
+#spring.h2.console.settings.web-allow-others=true
+#active : local , prod
+spring.profiles.active=prod
+logging.level.root=info
+
+logging.level.org.hibernate.type.descriptor.sql=trace
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+spring.datasource.url=jdbc:mariadb://localhost:3306/hairshop?characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.driverClassName=org.mariadb.jdbc.Driver
-#spring.h2.console.enabled=true
