--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=4000
 
 # Encoding
-spring.datasource.connectionProperties=useUnicode=true;characterEncoding=utf-8;"
+spring.datasource.connectionProperties=useUnicode=true;characterEncoding=utf-8;
 spring.datasource.sql-script-encoding=UTF-8
 
 spring.jpa.properties.hibernate.format_sql=true
@@ -29,7 +29,7 @@ logging.level.root=info
 logging.level.org.hibernate.type.descriptor.sql=trace
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
-spring.datasource.url=jdbc:mariadb://localhost:3306/hairshop?characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.url=jdbc:mariadb://localhost:3306/gym?characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.driverClassName=org.mariadb.jdbc.Driver
