--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,5 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/gym?characterEncoding=UTF-8&
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.driverClassName=org.mariadb.jdbc.Driver
+
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
