config 파일 , member파일 ,build 등

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,3 +35,5 @@ spring.datasource.password=1234
 spring.datasource.driverClassName=org.mariadb.jdbc.Driver
 
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
+jwt.secret=TEST
