--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,9 @@ dependencies {
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
     implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
     implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation group: 'org.mindrot', name: 'jbcrypt', version: '0.3m'
+    implementation 'io.jsonwebtoken:jjwt:0.9.1'
 
 
 }
