application.pro, gymmapper 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,4 +36,4 @@ spring.datasource.driverClassName=org.mariadb.jdbc.Driver
 
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
-jwt.secret=TEST
+spring.jwt.secret=TEST
